Only fix collapsing when empty.

--- a/scss/mixins/_grid-framework.scss
+++ b/scss/mixins/_grid-framework.scss
@@ -14,9 +14,11 @@
           flex-basis: 0;
           flex-grow: 1;
           max-width: 100%;
-          min-height: 1px;
           padding-right: ($gutter / 2);
           padding-left:  ($gutter / 2);
+        }
+        .col-#{$breakpoint}:empty {
+          min-height: 1px;
         }
       }
 
